--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "pip" "\0"
+            VALUE "CompanyName", "com.github.plippe" "\0"
+            VALUE "FileDescription", "pips" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "pip" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "pip.exe" "\0"
-            VALUE "ProductName", "pip" "\0"
+            VALUE "InternalName", "pips" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 com.github.plippe. All rights reserved." "\0"
+            VALUE "OriginalFilename", "pips.exe" "\0"
+            VALUE "ProductName", "pips" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
