--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,37 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: subosito/flutter-action@v2
-    - run: flutter pub get
-    - run: flutter test
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        target: ["apk --debug", "appbundle --debug", "ios --no-codesign"]
 
-  analyze:
-    runs-on: ubuntu-latest
+    name: Build ${{ matrix.target }}
+    runs-on: macos-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - uses: subosito/flutter-action@v2
-    - run: flutter pub get
-    - run: flutter analyze
+      - uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: temurin
+      - uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v2
+      - run: flutter pub get
+      - run: flutter build ${{ matrix.target }}
+
+  unit-test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    name: Unit tests on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v2
+      - run: flutter pub get
+      - run: flutter analyze
+      - run: flutter format --set-exit-if-changed --dry-run .
+      - run: flutter test
